--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 500px;
+    width: 400px;
 }
 
 .formulaire{
@@ -34,7 +34,6 @@ body{
 }
 
 .slogan{
-    font-size: 26px;
     line-height: 28px;
     width: auto;
     font-weight: normal;
@@ -138,9 +137,12 @@ a:hover{
 
 .links{
     display: flex;
+    position: relative;
+    bottom: 0;
+    width: 100%;
     flex-direction: column;
     background-color: white;
-    padding: 10px 11rem;
+    padding: 10px 28% 10px 23%;
     gap: 0.2rem;
     font-size: 12px;
     color: rgb(115, 115, 115);
@@ -176,4 +178,38 @@ a:hover{
 
 .brd_none{
     border: none;
+}
+
+@media screen and (max-width: 1050px) {
+    .face_body{
+        gap: 1rem;
+    }
+}
+
+@media screen and (max-width: 970px) {
+    .face_body{
+        gap: 1px;
+    }
+}
+
+@media screen and (max-width: 940px) {
+    .face_body{
+        flex-direction: column;
+        margin: 0;
+    }
+    .title_face img{
+        margin: 0px;
+    }
+    .slogan{
+        margin-left: 30px
+    }
+}
+
+@media screen and (max-width: 453px) {
+    .face_body{
+        margin: 30px;
+    }
+    .link_oublie a{
+        padding: 0 72px 20px 60px;
+    }
 }
