--- a/style.css
+++ b/style.css
@@ -134,50 +134,14 @@ a:hover{
     cursor: pointer;
 }
 
-
-.links{
-    display: flex;
-    position: relative;
-    bottom: 0;
-    width: 100%;
-    flex-direction: column;
-    background-color: white;
-    padding: 10px 28% 10px 23%;
-    gap: 0.2rem;
-    font-size: 12px;
-    color: rgb(115, 115, 115);
-}
-
-.langues{
-    display: flex;
-    gap: 10px;
-    border-bottom: 1px solid #dddfe2;
-    align-items: center;
-}
-
-.plus{
+.image_fond{
     display: flex;
     align-items: center;
-    width: 30px;
-    height: 25px;
-    font-size: 25px;
-    cursor: pointer;
+    justify-content: center;
 }
 
-.services{
-    display: flex;
-    gap: 20px;
-    align-items: center;
-    border: none;
-}
-
-.services p{
-    white-space: nowrap;
-    margin: 3px 0;
-}
-
-.brd_none{
-    border: none;
+.image_fond img{
+    width: 250px;
 }
 
 @media screen and (max-width: 1050px) {
